# XACE

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  MASTER_PLAN.md  README.md  XACE_File_Manifest_v2.docx  package.json  pyproject.toml  requirements.txt  tsconfig.json
adapters/godot/: xace_console_widget.gd  xace_delta_applicator.gd  xace_input_collector.gd  xace_transport.gd
adapters/unity/: XaceConsoleWidget.cs  XaceDeltaApplicator.cs  XaceInputCollector.cs  XaceTransport.cs
adapters/unreal/: XaceConsoleWidget.cpp  XaceConsoleWidget.h  XaceDeltaApplicator.cpp  XaceDeltaApplicator.h  XaceInputCollector.cpp  XaceInputCollector.h  XaceTransport.cpp  XaceTransport.h
docs/: 00_philosophy.md  01_system_overview.md  02_canonical_data_models.md  03_module_specs.md  04_contracts.md  05_mutation_lifecycle.md  06_determinism_guarantees.md  07_global_invariants.md  08_failure_classification.md  09_state_machines.md  10_versioning_and_build_order.md
tests/determinism/: test_entity_iteration_order.rs  test_event_ordering.rs  test_execution_order_stability.rs  test_mutation_gate_ordering.rs  test_mutation_transaction_atomicity.rs  test_parallel_execution_safety.rs  test_replay_validation.rs  test_rng_determinism.rs  test_schema_version_lock.rs  test_snapshot_roundtrip.rs  test_vertical_slice_determinism.rs  test_world_hash_consistency.rs
tests/fixtures/: README.md
workspace/builder/: package.json
workspace/builder/src/: main.tsx
workspace/builder/src/bottom_bar/: index.tsx
workspace/builder/src/canvas/: index.tsx
workspace/builder/src/command_palette/: index.tsx
(+3 files in other folders)
