[workspace]
resolver = "2"
members = [
    "packages/core",
    "packages/runtime-core",
    "packages/system-graph-compiler",
    "packages/engine-adapter",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["XACE Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
sha2 = "0.10"
